--- a/templates/login/site/private.html.twig
+++ b/templates/login/site/private.html.twig
@@ -2,5 +2,5 @@
 
 {% block body %}
     <h1>Private area</h1>
-    <h2>{{ app.user.username }} (#{{ app.user.id }})</h2>
+    <h2>{{ app.user.userIdentifier }} (#{{ app.user.id }})</h2>
 {% endblock %}
