--- a/templates/login/site/widget.html.twig
+++ b/templates/login/site/widget.html.twig
@@ -3,6 +3,6 @@
         src="https://telegram.org/js/telegram-widget.js?9"
         data-telegram-login="{{ telegram_bot_name }}"
         data-size="large"
-        data-auth-url="{{ path('login_guard') }}"
+        data-auth-url="{{ url('login_guard') }}"
         data-request-access="write">
 </script>
